# stream2pg

./: .gitignore  LICENSE  README.md  pyproject.toml
src/stream2pg/: __init__.py  config.py  core.py  db.py  errors.py  sink.py
tests/: conftest.py  test_config.py  test_db.py
